Bit of styling + removed some old code stupidity

--- a/src/components/WeatherTile.scss
+++ b/src/components/WeatherTile.scss
@@ -37,7 +37,9 @@
     font-size: 12px;
 
     img {
-      margin: -10px;
+      margin: -10px 0;
+      height: 100px;
+      width: 100px;
     }
 
     .temp-pressure-humidity {
